--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "immer": "^8.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.13.0",
     "react-router-dom": "^5.2.0",
     "use-immer": "^0.4.2",
     "webpack": "^4.44.2",
