--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.13.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "redux": "^4.0.5",
     "use-immer": "^0.4.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
